<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/Imagem"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_baseline_fact_check_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>
    <TextView
        android:id="@+id/Nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_produto"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/Imagem"
        app:layout_constraintTop_toTopOf="@id/Imagem"/>

    <TextView
        android:id="@+id/Quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qtdade"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        app:layout_constraintLeft_toRightOf="@id/Nome_produto"
        app:layout_constraintTop_toTopOf="@id/Nome_produto"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/reais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reais"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toLeftOf="@+id/Valor"
        app:layout_constraintLeft_toRightOf="@id/Quantidade"
        app:layout_constraintTop_toTopOf="@+id/Quantidade"/>

    <TextView
        android:id="@+id/Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/reais"
        app:layout_constraintTop_toTopOf="@+id/reais"/>


</androidx.constraintlayout.widget.ConstraintLayout>